--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,5 +11,7 @@
   <%= f.label :city %>
   <%= f.text_field :city %>
 
+  <%= f.collection_select :category_id, @categories.order(:id), :id, :title, options = {:prompt => "Category"}%>
+
   <%= f.submit %>
 <% end %>
