--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,5 @@
 <h2> Edit a new job at <%= @company.name %> here! </h2>
 
 <%= render partial: "form" %>
+
+<%= link_to "New Category", new_category_path(@category)%>
