--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,16 +1,23 @@
-Title: <%= @job.title %>
-<br>
+Title: <%= @job.title %><br>
 
-Description: <%= @job.description %>
-<br>
+Description: <%= @job.description %><br>
 
-Level of Interest: <%= @job.level_of_interest %>
-<br>
+Level of Interest: <%= @job.level_of_interest %><br>
 
-City: <%= @job.city %>
-<br>
+City: <%= @job.city %><br>
 
-Company: <%= link_to @job.company.name, company_path(@job.company) %>
+Company: <%= link_to @job.company.name, company_path(@job.company) %> <br>
 
+<%= form_for @comment do |f| %>
+  <%= f.text_area :content %>
+  <%= hidden_field(:job, :id) %>
+  <%= f.submit %>
+<% end %>
+
+<p> Comments:</p><br>
+<% @job.comments.order(created_at: :desc).each do |comment| %>
+<%= comment.created_at.to_date %> 
+<%= comment.content %> <br>
+<% end %> <br>
 <%=link_to "Edit", edit_company_job_path(@company, @job) %>
 <%= link_to "Delete", company_job_path(@company, @job), method: "delete"%>
